cmake_minimum_required(VERSION 3.10)
project(ASS4)

set(CMAKE_CXX_STANDARD 14)

add_executable(ASS4 main.cpp MovieNode.cpp MovieNode.h ClassicNode.cpp ClassicNode.h MovieDB.cpp MovieDB.h MovieHeadNode.cpp MovieHeadNode.h User.cpp User.h HashTable.cpp HashTable.h Movie.cpp Movie.h Comedy.cpp Comedy.h Classic.cpp Classic.h Drama.cpp Drama.h)